# Tordie-6

./: .gitignore  LICENSE  README.md  TODO  Tordie6.spec  config.ini  index.html  main.py  package-lock.json  package.json  requirements.txt  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
public/: splashscreen.html
src/: App.css  App.tsx  Canvas.tsx  CanvasRenderer.tsx  OffsetScale.tsx  ToOriginButton.tsx  __init__.py  ignore.tsx  index.css  main.tsx  tordie.config.json  vite-env.d.ts
src-tauri/: 2  Cargo.toml  icons.bat  tauri.conf.json
src-tauri/capabilities/: dialog.json  export.json  save-svg.json  window-control.json
src-tauri/src/: discord.rs  lib.rs  main.rs  td6.rs
src-tauri/src-tauri/: tauri.conf.json
src/components/: Viewport.tsx  app-provider.tsx  diagram-provider.tsx  document-provider.tsx  scene-provider.tsx  state-provider.tsx  status-provider.tsx  theme-provider.tsx
src/components/canvas/: Canvas.tsx  CanvasModeBinder.tsx  CanvasState.ts  canvas.tsx  geometryRenderers.tsx
src/domain/: STRUCTURE.md
src/frames/: canvas.py  controller.py  footer.py  main.py  splash.py  tool.py
src/lib/: animate.ts  canvasbounds.ts  color.ts  format.ts  math.ts  objects.ts  scene.tsx  ticks.ts  utils.ts
src/objects/: Shape.ts
src/services/: history.ts  load.ts  save.ts
src/temp_components/: Ruler.tsx
src/tools/: Selection.ts  setMode.ts  useSetMode.ts
src/types/: diagram.d.ts  index.d.ts  react-konva-to-svg.d.ts  scene.d.ts  state.d.ts
src/utils/: discord.py  fonts.py  logger.py  os.py
src/windows/: main.py  splash.py
(+67 files in other folders)
