[package]
name = "tordie"
version = "0.1.0"
description = "An SVG Generator for Origami"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
discord-rpc-client = "0.4.0"
lazy_static = "1.4"
dotenvy = "0.15"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zstd = "0.13"
anyhow = "1"
